--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <groupId>net.emaze</groupId>
     <artifactId>emaze-tinytypes-parent</artifactId>
     <packaging>pom</packaging>
-    <version>2.0</version>
+    <version>2.1-SNAPSHOT</version>
     <parent>
         <groupId>net.emaze</groupId>
         <artifactId>emaze-parent</artifactId>
@@ -29,8 +29,4 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
-
-  <scm>
-    <tag>2.0</tag>
-  </scm>
 </project>
