--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <groupId>net.emaze</groupId>
     <artifactId>emaze-tinytypes-parent</artifactId>
     <packaging>pom</packaging>
-    <version>2.1</version>
+    <version>2.2-SNAPSHOT</version>
     <parent>
         <groupId>net.emaze</groupId>
         <artifactId>emaze-parent</artifactId>
