--- a/pom.xml
+++ b/pom.xml
@@ -29,4 +29,8 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+    <scm>
+        <developerConnection>scm:git:file://${basedir}</developerConnection>
+        <tag>HEAD</tag>
+    </scm>
 </project>
