--- a/tinytypes/pom.xml
+++ b/tinytypes/pom.xml
@@ -3,10 +3,10 @@
     <groupId>net.emaze</groupId>
     <artifactId>emaze-tinytypes</artifactId>
     <packaging>jar</packaging>
-    <version>2.3-SNAPSHOT</version>
+    <version>2.3</version>
     <parent>
         <groupId>net.emaze</groupId>
         <artifactId>emaze-tinytypes-parent</artifactId>
-        <version>2.3-SNAPSHOT</version>
+        <version>2.3</version>
     </parent>
 </project>
