--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <groupId>net.emaze</groupId>
     <artifactId>emaze-tinytypes-parent</artifactId>
     <packaging>pom</packaging>
-    <version>2.3</version>
+    <version>2.4-SNAPSHOT</version>
     <parent>
         <groupId>net.emaze</groupId>
         <artifactId>emaze-parent</artifactId>
@@ -31,6 +31,6 @@
     </dependencyManagement>
     <scm>
         <developerConnection>scm:git:file://${basedir}</developerConnection>
-        <tag>2.3</tag>
+        <tag>HEAD</tag>
     </scm>
 </project>
