--- a/tinytypes-hibernate/pom.xml
+++ b/tinytypes-hibernate/pom.xml
@@ -3,11 +3,11 @@
     <groupId>net.emaze</groupId>
     <artifactId>emaze-tinytypes-hibernate</artifactId>
     <packaging>jar</packaging>
-    <version>2.3</version>
+    <version>2.4-SNAPSHOT</version>
     <parent>
         <groupId>net.emaze</groupId>
         <artifactId>emaze-tinytypes-parent</artifactId>
-        <version>2.3</version>
+        <version>2.4-SNAPSHOT</version>
     </parent>
 
     <dependencies>
