--- a/tinytypes-generation/pom.xml
+++ b/tinytypes-generation/pom.xml
@@ -3,11 +3,11 @@
     <groupId>net.emaze</groupId>
     <artifactId>emaze-tinytypes-generation</artifactId>
     <packaging>jar</packaging>
-    <version>2.4-SNAPSHOT</version>
+    <version>2.4</version>
     <parent>
         <groupId>net.emaze</groupId>
         <artifactId>emaze-tinytypes-parent</artifactId>
-        <version>2.4-SNAPSHOT</version>
+        <version>2.4</version>
     </parent>
 
     <dependencies>
