fix: removed buggy dependency

--- a/tinytypes-jackson/pom.xml
+++ b/tinytypes-jackson/pom.xml
@@ -27,6 +27,11 @@
             <version>2.6.4</version>
         </dependency>
         <dependency>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
