--- a/tinytypes-spring/pom.xml
+++ b/tinytypes-spring/pom.xml
@@ -30,5 +30,10 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
