--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <groupId>net.emaze</groupId>
     <artifactId>emaze-tinytypes-parent</artifactId>
     <packaging>pom</packaging>
-    <version>2.5-SNAPSHOT</version>
+    <version>2.5</version>
     <name>emaze-tinytypes-parent</name>
     <description>A support library for tinytypes and serialization/deserialization</description>
     <url>https://github.com/emaze/emaze-tinytypes</url>
@@ -101,6 +101,6 @@
     <scm>
         <url>https://github.com/emaze/emaze-tinytypes</url>
         <developerConnection>scm:git:file://${basedir}</developerConnection>
-        <tag>HEAD</tag>
+        <tag>2.5</tag>
     </scm>
 </project>
